style/style.css
/* ... */
ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.nav-content .link {
  position: relative;
  display: block;
  padding: 32px 0;

  color: var(--main-color-text);
  font-weight: 500;
  line-height: 1.4;
  letter-spacing: 0.02em;
  text-decoration: none;

  transition: color 250ms var(--timing-function-cubic);
}

.nav-content .item + .item,
.header-contacts .item + .item {
  margin-left: 50px;
}

/* =============== header contacts =============== */

.header-contacts .link {
  display: flex;
  padding: 32px 0;
  align-items: center;

  color: var(--subtitle-color);
  font-weight: 500;
  line-height: 1.4;
  letter-spacing: 0.02em;
  text-decoration: none;

  transition: color 250ms var(--timing-function-cubic);
}

.header-contacts .header-icon {
  margin-right: 10px;
  fill: currentColor;
}

.accent {
  color: var(--link-hover-color);
}

.nav-content .link:hover,
.nav-content .link:focus,
.header-contacts .link:hover,
.header-contacts .link:focus,
.nav-content .link.current {
  color: var(--link-hover-color);
}

.nav-content .link.current::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 4px;

  background-color: var(--link-hover-color);
  border-radius: 2px;
}

/* =============== flex header =============== */

.main-nav {
  display: flex;
  align-items: center;
}

.nav-content {
  display: flex;
  margin-left: 93px;
}

.site-nav {
  display: flex;
}
.header-contacts {
  display: flex;
  margin-left: auto;
}

/* =============== section-padding =============== */

.section {
  padding: 94px 0;
}
.section.no-padding-top {
  padding-top: 0;
}
/* =============== header  end =============== */

/* =============== section hero start =============== */
.hero {
  width: 1600px;
  height: 600px;
  max-width: 100%;
  margin: 0 auto;

  background-color: var(--hero-bg-color);
  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
    url('../images/hero-bg.jpg');
  background-position: center;
  background-repeat: no-repeat;

  color: var(--second-color-text);
  text-align: center;

  padding-top: 200px;
  padding-bottom: 200px;
}

.hero-title {
  width: 696px;
  margin-right: auto;
  margin-left: auto;
  margin-bottom: 30px;

  font-weight: 900;
  font-size: 44px;
  line-height: 1.36;
  letter-spacing: 0.06em;
  text-transform: uppercase;
}

.button-hero {
  min-width: 200px;
  padding: 10px 32px;

  background-color: var(--hero-button-color);
  color: var(--second-color-text);
  font-weight: 700;
  font-size: 16px;
  line-height: 1.8;
  letter-spacing: 0.06em;

  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
  border-radius: 4px;
  border-style: none;
  cursor: pointer;

  transition: background-color 250ms var(--timing-function-cubic),
    box-shadow 250ms var(--timing-function-cubic);
}

.button-hero:hover,
.button-hero:focus {
  background-color: var(--link-hover-color);
}

/*=============== backdrop start =============== */

.backdrop {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100vw;
  height: 100vh;

  opacity: 1;
  transition: opacity 250ms var(--timing-function-cubic);

  background-color: var(--backdrop-bg-color);
}

.backdrop.is-hidden {
  opacity: 0;
  pointer-events: none;
}

.backdrop.is-hidden .modal {
  transform: translate(-50%, -50%) scale(0.2);
}
.modal {
  position: absolute;
  top: 50%;
  left: 50%;

  padding: 40px;
  transform: translate(-50%, -50%) scale(1);
  transition: transform 250ms var(--timing-function-cubic);

  width: 528px;
  height: 581px;

  background-color: var(--second-color-text);
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
    0px 2px 1px rgba(0, 0, 0, 0.2);
  border-radius: 4px;
}

.modal-btn-close {
  position: absolute;
  top: 8px;
  right: 8px;

  display: flex;
  justify-content: center;
  align-items: center;
  width: 30px;
  height: 30px;

  border: 1px solid var(--modal-close-border);
  border-radius: 50%;
  background-color: inherit;
  transition: fill 250ms var(--timing-function-cubic), transform 500ms var(--timing-function-cubic);
  cursor: pointer;
}

.modal-btn-close:hover,
.modal-btn-close:focus {
  fill: var(--link-hover-color);
  transform: rotate(180deg);
}

.form-field {
  display: flex;
  flex-direction: column;
  margin-bottom: 10px;
  position: relative;
}

.form-field:focus-within > .form-field__icon {
  fill: var(--link-hover-color);
}

.form-field__input:focus,
.form-field textarea:focus {
  outline: transparent;
  border-color: var(--link-hover-color);
}
.wrapp-checkbox {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  margin-top: 20px;
  margin-bottom: 30px;
}

.wrapp-checkbox > span {
  font-size: 14px;
  line-height: 1.7;
  letter-spacing: 0.03em;

  color: var(--subtitle-color);
}

.form-field__link {
  color: var(--link-hover-color);
}

.modal-form-title {
  display: inline-block;
  margin-bottom: 12px;

  font-weight: 700;
  font-size: 20px;
  line-height: 1.15;
  text-align: center;
  letter-spacing: 0.03em;

  color: var(--main-color-text);
}

.form-field__lable {
  display: block;
  margin-bottom: 4px;
  font-size: 12px;
  line-height: 1.16;

  letter-spacing: 0.01em;

  color: var(--subtitle-color);
}

.form-field__input {
  padding: 11px 12px;
  padding-left: 42px;

  border: 1px solid var(--modal-form-border-cl);
  border-radius: 4px;
}

.form-field textarea {
  height: 120px;
  resize: none;
  padding: 12px 12px;

  border: 1px solid rgba(33, 33, 33, 0.2);
  border-radius: 4px;
}

.form-field__icon {
  position: absolute;
  top: 50%;
  left: 12px;
  fill: var(--main-color-text);
}

.no-margin {
  margin: 0;
}

.form-field__vector {
  display: block;
  width: 16px;
  height: 16px;
  margin-right: 7px;

  border-radius: 2px;
  border: 1.8px solid var(--main-color-text);
  background-color: white;

  cursor: pointer;
}
/* ... */

